custom-page-star-icon-overlap-issue

--- a/public/after_login/new_ui/css/responsive.css
+++ b/public/after_login/new_ui/css/responsive.css
@@ -96,7 +96,7 @@
   .garphlistincom+.garphlistincom{margin-left:10px;}
   .exam-analytics .abrv-graph{    width: 10px;
     height: 10px;}
-    .compLeteS .name-txt-sml{width: 57%;
+    .compLeteS .name-txt-sml{width: 47%;
         padding-right: 10px;font-size:14px;}
         .custom-page .star-ratings-css-bottom span,.custom-page .star-ratings-css-top span{font-size:13px;} 
         div.custom-page .star-ratings-css-top span {
